# Information-Retrieval-and-Search-Engines-RAG-project

./: .gitignore  IRSE-template.tex  IRSE-template.toc  IRSE_Project_2025.ipynb  IRSE_Project_2025_(pt2).ipynb  IRSE_proj (2).ipynb  IRSE_proj copy.ipynb  IRSE_proj old.ipynb  IRSE_proj.ipynb  README.md  Untitled1 (1).ipynb  notebook_w_prompots.ipynb  pyproject.toml  quesion.txt  report.md  slides.tex  utils.py
IRSE-handout-2025/: IRSE-template.tex  slides.tex
archive/: IRSE_proj.ipynb  IRSR proj.drawio  main.py  notebook_w_prompots.ipynb  run_notebooks_wiht_prompts.ipynb  slides.tex
pre/: commands.tex  imports.tex  references.bib  settings.tex
prompts/: prompot_wihtout_documents.txt  prompt_arab_dish_reasoning.txt  prompt_cactus_reasoning.txt  prompt_cakes.txt  prompt_calamari_reasoning.txt  prompt_ramsy_resoning.txt  prompt_rhode_reasoning.txt  prompt_tacos.txt  prompt_with_scores.txt  prompt_without_scores.txt  propmt_borscht_reasoning.txt  propt_cactus_bad_prompt.txt
src/: evaluation.py  llm.py  main.py  metrics.py  prompts.py  retrieve.py  utils.py
svg-inkscape/: architecture_svg-tex.pdf_tex  new_architecture_svg-tex.pdf_tex  new_svg-tex.pdf_tex
tfidf_problems/: Do you know any soups from Paraguay?.txt  How do you make piza.txt  How does Gordon Ramsay make his beef Wellington?.txt  I do not want to eat pizza, what can I eat instead?.txt  Where can I follow cooking classes.txt
timings/: experiment_calculate_metrics_time.txt  experiment_compression_430.75 seconds.txt  experiment_drawbacks_of_tfidf_time.txt  experiment_find_best_hyperparams_time.txt  (+7 more)
(+6 files in other folders)
