[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "transformers",
    "xformers>=0.0.29.post3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
