[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.0",
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "langchain-text-splitters>=0.3.8",
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers",
    "xformers>=0.0.29.post3",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers" }
